Ejercicios/Pruebas/tp2v3/src/tp2v3/tp2v3Parser.java
// Generated from C:\Users\Ramiro\Desktop\tp2v3\src\tp2v3\tp2v3.g4 by ANTLR 4.5.3
package tp2v3;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class tp2v3Parser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5.3", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		WS=1, FLOAT=2, INT=3, CHAR=4, IF=5, ELSE=6, FOR=7, WHILE=8, VOID=9, RETURN=10, 
		COMA=11, PUNTOYCOMA=12, LLAVE1=13, LLAVE2=14, PARENTESIS1=15, PARENTESIS2=16, 
		CORCHETE1=17, CORCHETE2=18, MAS=19, MENOS=20, BARRA=21, ASTERISCO=22, 
		AND=23, OR=24, IGUAL=25, IGUALIGUAL=26, DISTINTO=27, MENORIGUAL=28, MENOR=29, 
		MAYORIGUAL=30, MAYOR=31, NUMERO=32, FLOTANTE=33, ID=34;
	public static final int
		RULE_numero = 0, RULE_operando = 1, RULE_tipodato = 2, RULE_declaracionv = 3, 
		RULE_tipofuncion = 4, RULE_entrepa1 = 5, RULE_entrepa2 = 6, RULE_ret = 7, 
		RULE_llamadofunc = 8, RULE_definicionfunc = 9, RULE_operador = 10, RULE_operacion = 11, 
		RULE_listaop = 12, RULE_listaoperror = 13, RULE_definicionv = 14, RULE_cond = 15, 
		RULE_conds = 16, RULE_codigo = 17, RULE_bloquecodigo = 18, RULE_ifcond = 19, 
		RULE_elsecond = 20, RULE_forloop = 21, RULE_whileloop = 22, RULE_ins = 23, 
		RULE_instruccion = 24;
	public static final String[] ruleNames = {
		"numero", "operando", "tipodato", "declaracionv", "tipofuncion", "entrepa1", 
		"entrepa2", "ret", "llamadofunc", "definicionfunc", "operador", "operacion", 
		"listaop", "listaoperror", "definicionv", "cond", "conds", "codigo", "bloquecodigo", 
		"ifcond", "elsecond", "forloop", "whileloop", "ins", "instruccion"
	};

	private static final String[] _LITERAL_NAMES = {
		null, null, "'float'", "'int'", "'char'", "'if'", "'else'", "'for'", "'while'", 
		"'void'", "'return'", "','", "';'", "'{'", "'}'", "'('", "')'", "'['", 
		"']'", "'+'", "'-'", "'/'", "'*'", "'&&'", "'||'", "'='", "'=='", "'!='", 
		"'<='", "'<'", "'>='", "'>'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "WS", "FLOAT", "INT", "CHAR", "IF", "ELSE", "FOR", "WHILE", "VOID", 
		"RETURN", "COMA", "PUNTOYCOMA", "LLAVE1", "LLAVE2", "PARENTESIS1", "PARENTESIS2", 
		"CORCHETE1", "CORCHETE2", "MAS", "MENOS", "BARRA", "ASTERISCO", "AND", 
		"OR", "IGUAL", "IGUALIGUAL", "DISTINTO", "MENORIGUAL", "MENOR", "MAYORIGUAL", 
		"MAYOR", "NUMERO", "FLOTANTE", "ID"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "tp2v3.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public tp2v3Parser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class NumeroContext extends ParserRuleContext {
		public TerminalNode NUMERO() { return getToken(tp2v3Parser.NUMERO, 0); }
		public TerminalNode FLOTANTE() { return getToken(tp2v3Parser.FLOTANTE, 0); }
		public NumeroContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_numero; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof tp2v3Listener ) ((tp2v3Listener)listener).enterNumero(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof tp2v3Listener ) ((tp2v3Listener)listener).exitNumero(this);
		}
	}

	public final NumeroContext numero() throws RecognitionException {
		NumeroContext _localctx = new NumeroContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_numero);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(50);
			_la = _input.LA(1);
			if ( !(_la==NUMERO || _la==FLOTANTE) ) {
			_errHandler.recoverInline(this);
			} else {
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OperandoContext extends ParserRuleContext {
		public NumeroContext numero() {
			return getRuleContext(NumeroContext.class,0);
		}
		public TerminalNode ID() { return getToken(tp2v3Parser.ID, 0); }
		public OperandoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_operando; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof tp2v3Listener ) ((tp2v3Listener)listener).enterOperando(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof tp2v3Listener ) ((tp2v3Listener)listener).exitOperando(this);
		}
	}

	public final OperandoContext operando() throws RecognitionException {
		OperandoContext _localctx = new OperandoContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_operando);
		try {
			setState(54);
			switch (_input.LA(1)) {
			case NUMERO:
			case FLOTANTE:
				enterOuterAlt(_localctx, 1);
				{
				setState(52);
				numero();
				}
				break;
			case ID:
				enterOuterAlt(_localctx, 2);
				{
				setState(53);
				match(ID);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TipodatoContext extends ParserRuleContext {
		public TerminalNode INT() { return getToken(tp2v3Parser.INT, 0); }
		public TerminalNode FLOAT() { return getToken(tp2v3Parser.FLOAT, 0); }
		public TerminalNode CHAR() { return getToken(tp2v3Parser.CHAR, 0); }
		public TipodatoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tipodato; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof tp2v3Listener ) ((tp2v3Listener)listener).enterTipodato(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof tp2v3Listener ) ((tp2v3Listener)listener).exitTipodato(this);
		}
	}

	public final TipodatoContext tipodato() throws RecognitionException {
		TipodatoContext _localctx = new TipodatoContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_tipodato);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(56);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << FLOAT) | (1L << INT) | (1L << CHAR))) != 0)) ) {
			_errHandler.recoverInline(this);
			} else {
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclaracionvContext extends ParserRuleContext {
		public TerminalNode INT() { return getToken(tp2v3Parser.INT, 0); }
		public List<TerminalNode> ID() { return getTokens(tp2v3Parser.ID); }
		public TerminalNode ID(int i) {
			return getToken(tp2v3Parser.ID, i);
		}
		public TerminalNode IGUAL() { return getToken(tp2v3Parser.IGUAL, 0); }
		public TerminalNode NUMERO() { return getToken(tp2v3Parser.NUMERO, 0); }
		public TerminalNode FLOAT() { return getToken(tp2v3Parser.FLOAT, 0); }
		public NumeroContext numero() {
			return getRuleContext(NumeroContext.class,0);
		}
		public TerminalNode CHAR() { return getToken(tp2v3Parser.CHAR, 0); }
		public DeclaracionvContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaracionv; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof tp2v3Listener ) ((tp2v3Listener)listener).enterDeclaracionv(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof tp2v3Listener ) ((tp2v3Listener)listener).exitDeclaracionv(this);
		}
	}

	public final DeclaracionvContext declaracionv() throws RecognitionException {
		DeclaracionvContext _localctx = new DeclaracionvContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_declaracionv);
		int _la;
		try {
			setState(82);
			switch (_input.LA(1)) {
			case INT:
				enterOuterAlt(_localctx, 1);
				{
				setState(58);
				match(INT);
				setState(60);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
				case 1:
					{
					setState(59);
					match(ID);
					}
					break;
				}
				setState(64);
				_la = _input.LA(1);
				if (_la==IGUAL) {
					{
					setState(62);
					match(IGUAL);
					setState(63);
					match(NUMERO);
					}
				}

				}
				break;
			case FLOAT:
				enterOuterAlt(_localctx, 2);
				{
				setState(66);
				match(FLOAT);
				setState(68);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
				case 1:
					{
					setState(67);
					match(ID);
					}
					break;
				}
				setState(72);
				_la = _input.LA(1);
				if (_la==IGUAL) {
					{
					setState(70);
					match(IGUAL);
					setState(71);
					numero();
					}
				}

				}
				break;
			case CHAR:
				enterOuterAlt(_localctx, 3);
				{
				setState(74);
				match(CHAR);
				setState(76);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
				case 1:
					{
					setState(75);
					match(ID);
					}
					break;
				}
				setState(80);
				_la = _input.LA(1);
				if (_la==IGUAL) {
					{
					setState(78);
					match(IGUAL);
					setState(79);
					match(ID);
					}
				}

				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TipofuncionContext extends ParserRuleContext {
		public TerminalNode FLOAT() { return getToken(tp2v3Parser.FLOAT, 0); }
		public TerminalNode INT() { return getToken(tp2v3Parser.INT, 0); }
		public TerminalNode CHAR() { return getToken(tp2v3Parser.CHAR, 0); }
		public TerminalNode VOID() { return getToken(tp2v3Parser.VOID, 0); }
		public TipofuncionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tipofuncion; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof tp2v3Listener ) ((tp2v3Listener)listener).enterTipofuncion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof tp2v3Listener ) ((tp2v3Listener)listener).exitTipofuncion(this);
		}
	}

	public final TipofuncionContext tipofuncion() throws RecognitionException {
		TipofuncionContext _localctx = new TipofuncionContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_tipofuncion);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(84);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << FLOAT) | (1L << INT) | (1L << CHAR) | (1L << VOID))) != 0)) ) {
			_errHandler.recoverInline(this);
			} else {
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Entrepa1Context extends ParserRuleContext {
		public OperandoContext operando() {
			return getRuleContext(OperandoContext.class,0);
		}
		public TerminalNode COMA() { return getToken(tp2v3Parser.COMA, 0); }
		public Entrepa1Context entrepa1() {
			return getRuleContext(Entrepa1Context.class,0);
		}
		public Entrepa1Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_entrepa1; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof tp2v3Listener ) ((tp2v3Listener)listener).enterEntrepa1(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof tp2v3Listener ) ((tp2v3Listener)listener).exitEntrepa1(this);
		}
	}

	public final Entrepa1Context entrepa1() throws RecognitionException {
		Entrepa1Context _localctx = new Entrepa1Context(_ctx, getState());
		enterRule(_localctx, 10, RULE_entrepa1);
		try {
			setState(92);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(86);
				operando();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(87);
				operando();
				setState(88);
				match(COMA);
				setState(89);
				entrepa1();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Entrepa2Context extends ParserRuleContext {
		public TipodatoContext tipodato() {
			return getRuleContext(TipodatoContext.class,0);
		}
		public TerminalNode COMA() { return getToken(tp2v3Parser.COMA, 0); }
		public Entrepa2Context entrepa2() {
			return getRuleContext(Entrepa2Context.class,0);
		}
		public TerminalNode ID() { return getToken(tp2v3Parser.ID, 0); }
		public Entrepa2Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_entrepa2; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof tp2v3Listener ) ((tp2v3Listener)listener).enterEntrepa2(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof tp2v3Listener ) ((tp2v3Listener)listener).exitEntrepa2(this);
		}
	}

	public final Entrepa2Context entrepa2() throws RecognitionException {
		Entrepa2Context _localctx = new Entrepa2Context(_ctx, getState());
		enterRule(_localctx, 12, RULE_entrepa2);
		int _la;
		try {
			setState(106);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,11,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(94);
				tipodato();
				setState(96);
				_la = _input.LA(1);
				if (_la==ID) {
					{
					setState(95);
					match(ID);
					}
				}

				setState(98);
				match(COMA);
				setState(99);
				entrepa2();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(101);
				tipodato();
				setState(103);
				_la = _input.LA(1);
				if (_la==ID) {
					{
					setState(102);
					match(ID);
					}
				}

				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RetContext extends ParserRuleContext {
		public TerminalNode RETURN() { return getToken(tp2v3Parser.RETURN, 0); }
		public OperandoContext operando() {
			return getRuleContext(OperandoContext.class,0);
		}
		public RetContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ret; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof tp2v3Listener ) ((tp2v3Listener)listener).enterRet(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof tp2v3Listener ) ((tp2v3Listener)listener).exitRet(this);
		}
	}

	public final RetContext ret() throws RecognitionException {
		RetContext _localctx = new RetContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_ret);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(108);
			match(RETURN);
			setState(109);
			operando();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LlamadofuncContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(tp2v3Parser.ID, 0); }
		public Entrepa1Context entrepa1() {
			return getRuleContext(Entrepa1Context.class,0);
		}
		public TerminalNode PARENTESIS2() { return getToken(tp2v3Parser.PARENTESIS2, 0); }
		public TerminalNode PARENTESIS1() { return getToken(tp2v3Parser.PARENTESIS1, 0); }
		public LlamadofuncContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_llamadofunc; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof tp2v3Listener ) ((tp2v3Listener)listener).enterLlamadofunc(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof tp2v3Listener ) ((tp2v3Listener)listener).exitLlamadofunc(this);
		}
	}

	public final LlamadofuncContext llamadofunc() throws RecognitionException {
		LlamadofuncContext _localctx = new LlamadofuncContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_llamadofunc);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(111);
			match(ID);
			setState(113);
			_la = _input.LA(1);
			if (_la==PARENTESIS1) {
				{
				setState(112);
				match(PARENTESIS1);
				}
			}

			setState(115);
			entrepa1();
			setState(116);
			match(PARENTESIS2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DefinicionfuncContext extends ParserRuleContext {
		public TipofuncionContext tipofuncion() {
			return getRuleContext(TipofuncionContext.class,0);
		}
		public Entrepa2Context entrepa2() {
			return getRuleContext(Entrepa2Context.class,0);
		}
		public TerminalNode PARENTESIS2() { return getToken(tp2v3Parser.PARENTESIS2, 0); }
		public TerminalNode ID() { return getToken(tp2v3Parser.ID, 0); }
		public TerminalNode PARENTESIS1() { return getToken(tp2v3Parser.PARENTESIS1, 0); }
		public BloquecodigoContext bloquecodigo() {
			return getRuleContext(BloquecodigoContext.class,0);
		}
		public DefinicionfuncContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_definicionfunc; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof tp2v3Listener ) ((tp2v3Listener)listener).enterDefinicionfunc(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof tp2v3Listener ) ((tp2v3Listener)listener).exitDefinicionfunc(this);
		}
	}

	public final DefinicionfuncContext definicionfunc() throws RecognitionException {
		DefinicionfuncContext _localctx = new DefinicionfuncContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_definicionfunc);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(118);
			tipofuncion();
			setState(120);
			_la = _input.LA(1);
			if (_la==ID) {
				{
				setState(119);
				match(ID);
				}
			}

			setState(123);
			_la = _input.LA(1);
			if (_la==PARENTESIS1) {
				{
				setState(122);
				match(PARENTESIS1);
				}
			}

			setState(125);
			entrepa2();
			setState(126);
			match(PARENTESIS2);
			setState(128);
			_la = _input.LA(1);
			if (_la==LLAVE1) {
				{
				setState(127);
				bloquecodigo();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OperadorContext extends ParserRuleContext {
		public TerminalNode MAS() { return getToken(tp2v3Parser.MAS, 0); }
		public TerminalNode MENOS() { return getToken(tp2v3Parser.MENOS, 0); }
		public TerminalNode ASTERISCO() { return getToken(tp2v3Parser.ASTERISCO, 0); }
		public TerminalNode BARRA() { return getToken(tp2v3Parser.BARRA, 0); }
		public OperadorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_operador; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof tp2v3Listener ) ((tp2v3Listener)listener).enterOperador(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof tp2v3Listener ) ((tp2v3Listener)listener).exitOperador(this);
		}
	}

	public final OperadorContext operador() throws RecognitionException {
		OperadorContext _localctx = new OperadorContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_operador);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(130);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << MAS) | (1L << MENOS) | (1L << BARRA) | (1L << ASTERISCO))) != 0)) ) {
			_errHandler.recoverInline(this);
			} else {
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OperacionContext extends ParserRuleContext {
		public OperandoContext operando() {
			return getRuleContext(OperandoContext.class,0);
		}
		public ListaopContext listaop() {
			return getRuleContext(ListaopContext.class,0);
		}
		public ListaoperrorContext listaoperror() {
			return getRuleContext(ListaoperrorContext.class,0);
		}
		public OperacionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_operacion; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof tp2v3Listener ) ((tp2v3Listener)listener).enterOperacion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof tp2v3Listener ) ((tp2v3Listener)listener).exitOperacion(this);
		}
	}

	public final OperacionContext operacion() throws RecognitionException {
		OperacionContext _localctx = new OperacionContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_operacion);
		try {
			setState(141);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,17,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(132);
				operando();
				setState(133);
				listaop();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(138);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,16,_ctx) ) {
				case 1:
					{
					setState(135);
					operando();
					setState(136);
					listaoperror();
					}
					break;
				}
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ListaopContext extends ParserRuleContext {
		public OperadorContext operador() {
			return getRuleContext(OperadorContext.class,0);
		}
		public OperandoContext operando() {
			return getRuleContext(OperandoContext.class,0);
		}
		public ListaopContext listaop() {
			return getRuleContext(ListaopContext.class,0);
		}
		public ListaopContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_listaop; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof tp2v3Listener ) ((tp2v3Listener)listener).enterListaop(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof tp2v3Listener ) ((tp2v3Listener)listener).exitListaop(this);
		}
	}

	public final ListaopContext listaop() throws RecognitionException {
		ListaopContext _localctx = new ListaopContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_listaop);
		try {
			setState(148);
			switch (_input.LA(1)) {
			case MAS:
			case MENOS:
			case BARRA:
			case ASTERISCO:
				enterOuterAlt(_localctx, 1);
				{
				setState(143);
				operador();
				setState(144);
				operando();
				setState(145);
				listaop();
				}
				break;
			case FLOAT:
			case INT:
			case CHAR:
			case IF:
			case ELSE:
			case FOR:
			case WHILE:
			case VOID:
			case RETURN:
			case PUNTOYCOMA:
			case LLAVE2:
			case PARENTESIS2:
			case IGUALIGUAL:
			case DISTINTO:
			case MENORIGUAL:
			case MENOR:
			case MAYORIGUAL:
			case MAYOR:
			case NUMERO:
			case FLOTANTE:
			case ID:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ListaoperrorContext extends ParserRuleContext {
		public List<OperadorContext> operador() {
			return getRuleContexts(OperadorContext.class);
		}
		public OperadorContext operador(int i) {
			return getRuleContext(OperadorContext.class,i);
		}
		public ListaoperrorContext listaoperror() {
			return getRuleContext(ListaoperrorContext.class,0);
		}
		public ListaoperrorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_listaoperror; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof tp2v3Listener ) ((tp2v3Listener)listener).enterListaoperror(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof tp2v3Listener ) ((tp2v3Listener)listener).exitListaoperror(this);
		}
	}

	public final ListaoperrorContext listaoperror() throws RecognitionException {
		ListaoperrorContext _localctx = new ListaoperrorContext(_ctx, getState());
